testsuite/tests/indexed-types/should_fail/T8227.stderr

T8227.hs:17:44: error:
    • Couldn't match expected type: Scalar (V (Scalar (V a)))
                  with actual type: Scalar (V a)
      NB: ‘Scalar’ is a non-injective type family
    • In the first argument of ‘arcLengthToParam’, namely ‘eps’
      In the expression: arcLengthToParam eps eps
      In an equation for ‘absoluteToParam’:
          absoluteToParam eps seg = arcLengthToParam eps eps
    • Relevant bindings include
        seg :: a (bound at T8227.hs:17:21)
        eps :: Scalar (V a) (bound at T8227.hs:17:17)
        absoluteToParam :: Scalar (V a) -> a -> Scalar (V a)
          (bound at T8227.hs:17:1)
